--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -22,9 +24,13 @@
         </activity>
         <activity android:name=".AlbumsActivity" />
         <activity android:name=".AlbumViewAcitvity" />
-        <activity android:name=".CameraFolders"></activity>
-        <activity android:name=".CameraActivity"></activity>
-        <activity android:name=".takePhoto"></activity>
+        <activity android:name=".CameraFolders" />
+        <activity android:name=".CameraActivity" />
+        <activity android:name=".takePhoto" />
+        <activity android:name=".ChooseCollageActivity" />
+        <activity android:name=".CollageActivity" />
+        <activity android:name=".FotoActivity" />
+        <activity android:name=".LettersActivity"></activity>
     </application>
 
 </manifest>
